solc_ossfuzz_seed_corpus/test_sol/test_cc20092c10c41e489cbbb60b8b0f1079ab986cd572eaae1b521ac93f91687220_9e3600fbda38ec67fe629fd3ae85a5b8f3e6562d_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0() 
{
}

==== Source: su1.sol ====
pragma abicoder v1;
pragma solidity >= 0.0.0;
contract C0 {
}
function f1(bytes27 i0,function () external i1) 
{ }
function f2(address i0,int56 i1)  returns(uint96 o0,uint232 o1,address o2,uint168 o3)
{

  {
  }

  {




{


}
{
  {


    {


      {


      }


      {
        {


        }
      }
    }

  }
  o3 |= (++o1 + 42662697782365919919306565418939270937414807981193);

}
o2 = i0;
  }

}
// ----
// TypeError 7366: (su1.sol:370-435): Operator |= not compatible with types uint168 and uint232
